Did some hotfix, finally everything is OK.

--- a/DOCUMENTATION/THESIS.tex
+++ b/DOCUMENTATION/THESIS.tex
@@ -138,7 +138,7 @@ Elsőként a programhoz készült telepítővel történő konfigurálást vessz
 
 \subsubsection{Telepítés natív telepítővel}
 Ez a telepítési mód csak a \emph{Windows}-t használók számára érhető el.\par
-Az első lépés a telepítési varázsló elindítása. A megjelenő párbeszédpanelon kattintsunk a \textbf{Telepítés} gombra. Ezt követően elindul a telepítés, ami körülbelül fél percet vesz igénybe.\par
+Az első lépés a telepítési varázsló elindítása. A megjelenő párbeszédpanelon kattintsunk az \textbf{Install} gombra. Ezt követően elindul a telepítés, ami körülbelül fél percet vesz igénybe.\par
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.6\textwidth]{pics/setup.png}
@@ -154,7 +154,7 @@ Fogadjuk el a licencszerződést, töltsük le a \emph{JRE} telepítőfájlt. Ha
 
 \subsubsection{Eltávolítás}
 A program törlése az utóbb ismertetett telepítési mód esetében mindössze annyiból áll, hogy a \textbf{SRTNGLGRTHMS.jar} fájlt eltávolítjuk, valamint amennyiben a jövőben nincs igény a \emph{Java} futtatási környezet használatára, úgy a felhasználó eltávolíthatja azt.\par
-\emph{Windows}-on történő natív telepítést követően a program telepítési könyvtárában található \textbf{unins000.exe} fájlt futtatva, majd az \textbf{Igen} gombra kattintva a program törlődik a számítógépről.
+\emph{Windows}-on történő natív telepítést követően a program telepítési könyvtárában található \textbf{unins000.exe} fájlt futtatva, majd a \textbf{Yes} gombra kattintva a program törlődik a számítógépről.
 
 \section{Felhasználói felület bemutatása}
 \subsection{Főmenü}
@@ -526,7 +526,7 @@ Az elsődleges szempont az, hogy a felhasználó könnyedén tudja kezelni a pro
 \subsection{Használt fejlesztőeszközök}
 A fejlesztés \emph{Eclipse SDK 4.4} fejlesztői környezet keretei között történik. A program grafikus fejlesztői felületet ad alkalmazások készítéséhez.\par
 A kódolást segítő funkció volt a kódkiegészítés, továbbá az egyik beépített projektmenedzsment eszköz (\emph{EGit}).\par
-A fejlesztéshez elengedhetetlen a \emph{Java SE 8 Update 40} vagy magasabb verziójú szoftver. Továbbá a fejlesztést nagyban elősegíti a \emph{JavaFX Scene Builder 2.0}, melynek segítségével egyszerűen megtervezhetővé válnak a grafikus felület komponensei.\par
+A fejlesztéshez elengedhetetlen a \emph{Java SE 8 Update 45} vagy magasabb verziójú szoftver. Továbbá a fejlesztést nagyban elősegíti a \emph{JavaFX Scene Builder 2.0}, melynek segítségével egyszerűen megtervezhetővé válnak a grafikus felület komponensei.\par
 Végül a telepítési környezet létrehozásához \emph{Ant} és \emph{InnoSetup} eszközök kerülnek felhasználásra.
 Az egész projekt, beleértve e dokumentumot is megtalálható, és az egyes verziók visszakövethetők a \emph{GitHub}-on: \url{https://github.com/marfoldi/SRTNGLGRTHMS}\par
 A program fejlesztése során egyedüli külső függvénykönyvtár a \emph{JUnit}, melynek segítségével egységtesztek készülnek.
